# CMakePracticeExample

./: README.md
cmake/t1/: CMakeLists.txt  main.c
cmake/t2/: CMakeLists.txt
cmake/t2/src/: CMakeLists.txt
cmake/t3/: CMakeLists.txt
cmake/t3/src/: CMakeLists.txt  main.c
cmake/t4/: CMakeLists.txt
cmake/t4/lib/: CMakeLists.txt  hello.c  hello.h
cmake/t5/: CMakeLists.txt
cmake/t5/src/: CMakeLists.txt  main.c
cmake/t6/: CMakeLists.txt
cmake/t6/src/: CMakeLists.txt  main.c
cmake/t7/: CMakeLists.txt
cmake/t7/cmake/: FindHELLO.cmake
cmake/t7/src/: CMakeLists.txt  main.c
